--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,24 @@ pkg_check_modules(sqlite3 sqlite3>=3.8.3 REQUIRED)
 
 set(CMAKE_BUILD_TYPE Debug)
 
-include_directories(
+add_library(verbly
+  lib/filter.cpp
+  lib/field.cpp
+  lib/notion.cpp
+  lib/word.cpp
+  lib/frame.cpp
+  lib/part.cpp
+  lib/form.cpp
+  lib/pronunciation.cpp
+  lib/statement.cpp
+  lib/database.cpp
+  lib/token.cpp)
+
+target_include_directories(verbly PUBLIC
+  lib
   vendor/hkutil
   vendor/hkutil/vendor)
 
-add_library(verbly lib/filter.cpp lib/field.cpp lib/notion.cpp lib/word.cpp lib/frame.cpp lib/part.cpp lib/form.cpp lib/pronunciation.cpp lib/statement.cpp lib/binding.cpp lib/database.cpp lib/token.cpp lib/part.cpp)
 set_property(TARGET verbly PROPERTY CXX_STANDARD 11)
 set_property(TARGET verbly PROPERTY CXX_STANDARD_REQUIRED ON)
 target_link_libraries(verbly ${sqlite3_LIBRARIES})
